--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "electron-pug",
-  "version": "1.5.1",
-  "description": "Simple electron module to render Pug (former Jade) templates",
+  "name": "electron-pug-less",
+  "version": "1.0.0",
+  "description": "Simple electron module to render Pug & less templates",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yan-foto/electron-pug"
+    "url": "https://github.com/pagoru/electron-pug-less"
   },
   "keywords": [
     "electron",
     "node",
     "pug"
   ],
-  "author": "Yan Foto <yan.foto@quaintous.com>",
+  "author": "Pablo (github.com/pagoru), Yan Foto <yan.foto@quaintous.com>",
   "license": "MIT",
   "dependencies": {
     "mime": "^1.3.4",
-    "pug": "^2.0.0-alpha3"
+    "pug": "^2.0.0-alpha3",
+    "less": "^2.7.2"
   }
 }
